Added CSS touch

--- a/master.css
+++ b/master.css
@@ -8,7 +8,13 @@ hr{
     height: 0px;
     width: 10%;
 }
-h1{
-    color: #66BFBF;
+.Regal:hover{
+    color: gold;
 }
 h3{color: #66BFBF;}
+h1 {
+    color: #66BFBF;;
+}
+a:hover{
+    color: green;
+}
